Add CSV import strategy